<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/edit_text_food_name_dialog"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/add_food_dialog_food_name_edit_text_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="5">

        <EditText
            android:id="@+id/edit_text_food_quantity_dialog"
            android:inputType="phone"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/add_food_dialog_quantity_edit_text_hint" />

        <Spinner
            android:id="@+id/spinner_unit"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:entries="@array/unit_array"
            android:prompt="@string/add_food_dialog_unit_prompt"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/category_array"
        android:prompt="@string/add_food_dialog_category_prompt"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinner_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/category_array"
        android:prompt="@string/add_food_dialog_section_prompt"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/calendar_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_calendar"/>

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_food_dialog_expiration_date_label"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/camera_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_menu_camera"
            android:scaleType="fitXY"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/captured_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>