<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/move_food_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_food_text_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/move_food_text_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/scrollView">

        <LinearLayout
            android:id="@+id/food_checkboxes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/move_food_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/move_food_text_2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/move_food_spinner_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/category_array"
        android:prompt="@string/section_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/move_food_text_2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>