<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_coordinator_layout"
    tools:context="com.apps.yecotec.fridgetracker.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

    </FrameLayout>

    <include layout="@layout/content_main" />

    <View
        android:id="@+id/clickable_screen"
        android:background="@color/mainFabOpened"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="194dp">

        <TextView
            android:id="@+id/label_add_food_fab"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="wrap"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:text="@string/add_food_fab_label"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="invisible"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_food_fab"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/add_food_fab"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toLeftOf="@+id/add_food_fab"
            android:layout_marginEnd="16dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_food_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="invisible"
            app:elevation="6dp"
            app:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_tomato"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            android:layout_margin="@dimen/fab_margin"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="vertical" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="124dp">

        <TextView
            android:id="@+id/label_add_section_fab"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="wrap"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:text="@string/add_section_fab_label"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="invisible"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:elevation="2dp"

            app:layout_constraintBottom_toBottomOf="@+id/add_section_fab"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/add_section_fab"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.428"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toLeftOf="@+id/add_section_fab" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_section_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="invisible"
            app:elevation="6dp"
            app:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_fridge"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            android:layout_margin="@dimen/fab_margin"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="54dp">

        <TextView
            android:id="@+id/label_main_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:text="@string/main_fab_label"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="invisible"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/main_fab"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/main_fab"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toLeftOf="@+id/main_fab"
            android:layout_marginEnd="16dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_gravity="bottom|end"
            android:id="@+id/main_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="6dp"
            app:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_add"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            android:layout_margin="@dimen/fab_margin"/>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
